[gd_scene load_steps=2 format=3 uid="uid://cctxo2sebxbnc"]

[ext_resource type="Script" uid="uid://0jblpmrfmxsd" path="res://scripts/ui/EndingManager.gd" id="1_v3aiq"]

[node name="EndingScene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_v3aiq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LblTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TxtBody" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BtnRetry" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="BtnQuit" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
